--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo</title>
+    <title>Jean's Zoo</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <h1>Welcome to Johnny's Zoo</h1>
-    <h3>See the animals at the zoo:</h3>
+    <h1>Welcome to Jean's Zoo</h1>
+    <h3>See the animals at Jean's Zoo:</h3>
     <div class="link">
-      <a href="polar-bear.html">Polar Bear</a>
+      <a href="borzoi.html">Borzoi</a>
+      <a href="possum.html">Possum</a>
+      <a href="red-panda.html">Red Panda</a>
+      <a href="fruit-fox.html">Fruit Fox</a>
     </div>
   </body>
 </html>
